# pacmod2

./: .gitignore  .gitmodules  .travis.rosinstall  .travis.rosinstall.melodic  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  contributors.txt  package.xml
.circleci/: config.yml
include/pacmod/: pacmod_common.h  pacmod_core.h  pacmod_defines.h  pacmod_ros_msg_handler.h
include/pacmod2/: pacmod2_common.hpp  pacmod2_core.hpp  pacmod2_node.hpp  pacmod2_ros_msg_handler.hpp
launch/: pacmod.launch  pacmod2.launch  pacmod2.launch.xml  pacmod_perfboard.launch
msg/: GlobalRpt.msg  global_rpt.msg  motor_rpt_1.msg  motor_rpt_2.msg  motor_rpt_3.msg  pacmod_cmd.msg  position_with_speed.msg
pacmod/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  install_prereqs.sh  package.xml
pacmod/dbc/: as_pacmod_v2.0.1.dbc
pacmod/include/pacmod/: pacmod_common.h  pacmod_core.h  pacmod_ros_msg_handler.h
pacmod/launch/: pacmod.launch
pacmod/src/: pacmod_core.cpp  pacmod_node.cpp  pacmod_ros_msg_handler.cpp
pacmod_msgs/: CMakeLists.txt
pacmod_msgs/msg/: DateTimeRpt.msg  LatLonHeadingRpt.msg  PacmodCmd.msg
src/: pacmod2_core.cpp  pacmod2_driver.cpp  pacmod2_node.cpp  pacmod2_ros_msg_handler.cpp  pacmod_core.cpp  pacmod_node.cpp  pacmod_ros_msg_handler.cpp
