<?xml version="1.0"?>
<package>
  <name>pacmod</name>
  <version>0.1.0</version>
  <description>The pacmod package</description>
  <maintainer email="jdriscoll@autonomoustuff.com">Joe Driscoll</maintainer>
  <license>Closed Source</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pacmod</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>as_can_interface</build_depend>  
  <build_depend>globe_epas</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>as_can_interface</run_depend>
  <run_depend>globe_epas</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
