<?xml version="1.0"?>
<package>
  <name>pacmod</name>
  <version>0.1.0</version>
  <description>The pacmod package</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <license>Closed Source</license>
  <!-- <url type="website">http://wiki.ros.org/pacmod</url> -->
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>can_interface</build_depend>  
  <build_depend>globe_epas</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>can_interface</run_depend>
  <run_depend>globe_epas</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
