<?xml version="1.0"?>
<package>
  <name>pacmod</name>
  <version>2.0.0</version>
  <description>AutonomouStuff PACMod driver package</description>
  <license>Closed Source</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_interface</build_depend>  
  <build_depend>pacmod_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>can_interface</run_depend>
  <run_depend>pacmod_msgs</run_depend>
  <run_depend>can_msgs</run_depend>
</package>
