<?xml version="1.0"?>
<package format="2">
  <name>pacmod</name>
  <version>2.0.2</version>
  <description>AutonomouStuff PACMod driver package</description>
  <license>MIT</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <build_depend>roslint</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pacmod_msgs</depend>
  <depend>can_msgs</depend>
</package>
